--- a/Index.html
+++ b/Index.html
@@ -19,8 +19,8 @@
     <main>
         <div class="text-container">
             <p>
-                VU mit mehreren PKW und Personen.<br>
-                Bei Eintreffen an der Einsatzstelle zeigt sich ein Szenario von mehreren Verletzten.<br>
+                VU mit 2 beteiligten PKW<br>
+                Bei Eintreffen an der Einsatzstelle sind mehrere Beteiligte Personen sichtbar<br>
                 Diese befinden sich in und um die Fahrzeuge verteilt.<br>
                 Die Einsatzstelle ist momentan keinen weiteren Gefahren ausgesetzt und man kann die Einsatzstelle begehen.<br>
                 Weiteres Vorgehen nach eigenen Vorgaben.
@@ -222,7 +222,7 @@
         }
 
         #einsatzabbruchButton {
-            padding: 15px 30px;
+            padding: 15px 15px;
             background-color: #e74c3c;
             color: white;
             border: none;
@@ -241,7 +241,7 @@
 
         /* Schriftgröße im Textbereich */
         .text-container p {
-            font-size: 1.5em; /* Größere Schrift */
+            font-size: 1.8em; /* Größere Schrift */
         }
 
         /* Blinkende Animation */
