--- a/Index.html
+++ b/Index.html
@@ -46,6 +46,13 @@
                 <li><a href="patient5.html">Patient5</a></li>
                 <li><a href="patient6.html">Patient6</a></li>
                 <li><a href="patient7.html">Patient7</a></li>
+                <li><a href="patient7.html">Patient8</a></li>
+                <li><a href="patient7.html">Patient9</a></li>
+                <li><a href="patient7.html">Patient10</a></li>
+                <li><a href="patient7.html">Patient11</a></li>
+                <li><a href="patient7.html">Patient12</a></li>
+                <li><a href="patient7.html">Patient13</a></li>
+                <li><a href="patient7.html">Patient14</a></li>
                 <li><a href="Einstellungen.html">Einstellungen</a></li>
                 <li><a href="#about">Über uns</a></li>
             </ul>
