--- a/Patient3.html
+++ b/Patient3.html
@@ -49,7 +49,7 @@
             display: block;
             margin-top: 10px;
             font-size: 0.9em;
-            color: white;
+            color: red;
             font-weight: bold;
         }
 
@@ -123,25 +123,27 @@
 <!-- Buttons -->
 <div class="button-container">
     <button id="btn1" class="btn">
-        Pat.M 47 Jahre alt.<br>Der Pat. wirkt sehr blass<br>Der Pat. atmet nicht und hat keinen zentralen Puls.
-        <span>⬇ Weitere Informationen</span>
+        Pat.M 47 Jahre alt.<br>Der Pat. atmet nicht und hat keinen zentralen Puls.
+        <span>Weiter durch klicken</span>
     </button>
     <button id="btn2" class="btn hidden">
-        Der Pat. hat große Wunden an den unterschenkeln und viele Hämatome.<br>Der Pat. ist stark im PKW eingeklemmt.
-        <span>⬇ Weitere Informationen</span>
+        Der Pat. hat große Wunden an den unterschenkeln und viele Hämatome.<br>Der Pat. ist stark im PKW eingeklemmt.<br>Eine schnelle Rettung ist nicht möglich<br>
+
+        <span>Weiter durch klicken</span>
     </button>
     <button id="btnCountdown1" class="btn hidden">
-        Sofortmaßnahme: Betreuung<br>bis Rettung erfolgt?<span id="countdown1" class="countdown"></span>
+        Betreuung<br>bis Rettung erfolgt?<span id="countdown1" class="countdown"></span>
     </button>
     <button id="btnCountdown2" class="btn hidden">
         Keine Sofortmaßnahme durchführbar<br><span id="countdown2" class="countdown"></span>
     </button>
     <button id="btn3" class="btn hidden">
         Dem Pat. kann nicht geholfen werden.<br>
-        <span>⬇ Weitere Informationen</span>
+        <span>Weiter durch klicken</span>
     </button>
     <button id="btn4" class="btn hidden">
         Sichtungskategorie wählen<br>und zum nächsten Patienten!
+        <span>Weiter durch klicken</span>
     </button>
 </div>
 
@@ -203,7 +205,7 @@
     });
 
     document.getElementById("btnCountdown2").addEventListener("click", function () {
-        startCountdown("btnCountdown2", "countdown2", "btn3", "btnCountdown1", 1);
+        startCountdown("btnCountdown2", "countdown2", "btn4", "btnCountdown1", 1);
     });
 
     document.getElementById("btn3").addEventListener("click", function () {
