--- a/Patient4.html
+++ b/Patient4.html
@@ -49,7 +49,7 @@
             display: block;
             margin-top: 10px;
             font-size: 0.9em;
-            color: white;
+            color:red;
             font-weight: bold;
         }
 
@@ -123,12 +123,13 @@
 <!-- Buttons -->
 <div class="button-container">
     <button id="btn1" class="btn">
-        Pat. W 25 Jahre alt.<br>Die Pat. wirkt sehr verwirrt un aufgeregt<br>Sie konnte den PKW bereits selber verlassen.<br>Die Pat. hält sich den Arm vor Schmerzen.
-        <span>⬇ Weitere Informationen</span>
+        Pat. W 25 Jahre alt.<br>Die Pat. wirkt sehr verwirrt un aufgeregt<br>Sie konnte den PKW bereits selber verlassen.
+        <br>Die Pat. hält sich den Arm vor Schmerzen ist aber ABC-Stabil
+        <span>Weiter durch klicken</span>
     </button>
     <button id="btn2" class="btn hidden">
         Die Pat. gibt weitere Schmerzen im Thoraxbereich an.<br>Ausgelöst durch den Gurt im PKW.<br>Der Arm weist eine sichtbare geschlossene Fehlstellung vor.
-        <span>⬇ Weitere Informationen</span>
+        <span>Weiter durch klicken</span>
     </button>
     <button id="btnCountdown1" class="btn hidden">
         Sofortmaßnahme:<br>Anlage Schienungsmaterial<br><span id="countdown1" class="countdown"></span>
@@ -138,7 +139,7 @@
     </button>
     <button id="btn3" class="btn hidden">
         Die Pat. gibt weiter Schmerzen an.<br>Die Pat. ist weiter ABC-Stabil
-        <span>⬇ Weitere Informationen</span>
+        <span>Weiter durch klicken</span>
     </button>
     <button id="btn4" class="btn hidden">
         Sichtungskategorie wählen<br>und zum nächsten Patienten!
