--- a/Patient5.html
+++ b/Patient5.html
@@ -49,7 +49,7 @@
             display: block;
             margin-top: 10px;
             font-size: 0.9em;
-            color: white;
+            color: red;
             font-weight: bold;
         }
 
@@ -123,14 +123,15 @@
 <!-- Buttons -->
 <div class="button-container">
     <button id="btn1" class="btn">
-        Pat.W 22 Jahre alt.<br>Pat. klagt über Kopfschmerzen<br> und kann sich an das geschehene nicht errinern<br>
+        Pat.W 22 Jahre alt.<br>Pat. klagt über Kopfschmerzen<br>kann sich an das geschehene nicht errinern
+        <br>Pat. ist ABC-Stabil
 
-        <span>⬇ Weitere Informationen</span>
+<span>Weiter durch klicken</span>
     </button>
     <button id="btn2" class="btn hidden">
         Die Pat. klagt über starke Nackenschmerzen. <br>An der Stirn ist ein großen Hämatom sichtbar.<br>
         Sie ist nicht eingeklemmt und frei zugänglich.
-        <span>⬇ Weitere Informationen</span>
+        <span>Weiter durch klicken</span>
     </button>
     <button id="btnCountdown1" class="btn hidden">
         Sofortmaßnahme:<br>schnelle Rettung<br>
@@ -145,11 +146,11 @@
     </button>
     <button id="btn3" class="btn hidden">
        Die Pat. bekommt Kribbeln abwärts des Beckens<br>Die Pat. wird C Kritisch
-        <span>⬇ Weitere Informationen</span>
+        <span>Weiter durch klicken</span>
     </button>
     <button id="btnCustom" class="btn hidden">
        Die Pat. ist weiter ABC-Stabil<br>
-       <span>⬇ Weitere Informationen</span>
+       <span>Weiter durch klicken</span>
     </button>
     <button id="btn4" class="btn hidden">
         Sichtungskategorie wählen<br>und zum nächsten Patienten!
