--- a/Patient6.html
+++ b/Patient6.html
@@ -49,7 +49,7 @@
             display: block;
             margin-top: 10px;
             font-size: 0.9em;
-            color: white;
+            color:red;
             font-weight: bold;
         }
 
@@ -123,12 +123,12 @@
 <!-- Buttons -->
 <div class="button-container">
     <button id="btn1" class="btn">
-        Pat. W 67 Jahre alt.<br>Die Pat. war nicht direkt beteiligt.<br>Sie ist spazieren gegangen und hat den Unfall der Leitstelle gemeldet.<br>
-        <span>⬇ Weitere Informationen</span>
+        Pat. W 67 Jahre alt.<br>Die Pat. war nicht direkt beteiligt.<br>Sie ist spazieren gegangen und hat den Unfall der Leitstelle gemeldet.<br>Die Pat. ist ABC-Stabil
+        <span>Weiter durch klicken</span>
     </button>
     <button id="btn2" class="btn hidden">
-        Die Pat.wirkt sehr mitgenommen<br>Sie sagt, dass sie ihren Mann bei einem VU verloren hat.<br>Es sind keine Verletzungen sichtbar.<br>Die Pat. ist ABC-Stabil
-        <span>⬇ Weitere Informationen</span>
+        Die Pat.wirkt sehr mitgenommen<br>Sie sagt, dass sie ihren Mann bei einem VU verloren hat.<br>Es sind keine Verletzungen sichtbar.<br>
+        <span>Weiter durch klicken</span>
     </button>
     <button id="btnCountdown1" class="btn hidden">
         Sofortmaßnahme:<br>Betreuung bis weiter Kräfte am Ort<span id="countdown1" class="countdown"></span>
@@ -139,7 +139,7 @@
     </button>
     <button id="btn3" class="btn hidden">
         Der Zustand der Pat. ist unverändert.<br>
-        <span>⬇ Weitere Informationen</span>
+        <span>Weiter durch klicken</span>
     </button>
     <button id="btn4" class="btn hidden">
         Sichtungskategorie wählen<br>und zum nächsten Patienten!
