--- a/Patient7.html
+++ b/Patient7.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="de">
 <head>
@@ -49,7 +50,7 @@
             display: block;
             margin-top: 10px;
             font-size: 0.9em;
-            color: white;
+            color:red;
             font-weight: bold;
         }
 
@@ -126,12 +127,12 @@
         Pat. M 41 Jahre alt.<br>Der Pat. liegt auf dem Rücken neben dem Fahrzeug.<br>
         Der Pat. reagiert nicht auf Ansprache aber auf Schmerzreiz.<br>
     
-        <span>⬇ Weitere Informationen</span>
+        <span>Weiter durch klicken</span>
     </button>
     <button id="btn2" class="btn hidden">
-        Bei A ist ein schnarchendes Atemngeräusch warzunehmen<br>Der Puls ist zentral und peripher gut tastbar.<br>
+        Bei A ist ein schnarchendes Atemgeräusch warzunehmen<br>Der Puls ist zentral und peripher gut tastbar.<br>
         Der Pat. war Insasse des Fahrzeuges.
-        <span>⬇ Weitere Informationen</span>
+        <span>Weiter durch klicken</span>
     </button>
     <button id="btnCountdown1" class="btn hidden">
         Sofortmaßnahme:<br>stabile Seitenlage<span id="countdown1" class="countdown"></span>
@@ -144,7 +145,7 @@
     </button>
     <button id="btn3" class="btn hidden">
         Die Atemwege konnten vorerst gesichert werden
-        <span>⬇ Weitere Informationen</span>
+        <span>Weiter durch klicken</span>
     </button>
     <button id="btnCustom" class="btn hidden">
       Keine Atmung vorhanden<br>Kein zentraler Puls tastbar
