--- a/Patient8.html
+++ b/Patient8.html
@@ -49,7 +49,7 @@
             display: block;
             margin-top: 10px;
             font-size: 0.9em;
-            color: white;
+            color: red;
             font-weight: bold;
         }
 
@@ -123,12 +123,12 @@
 <!-- Buttons -->
 <div class="button-container">
     <button id="btn1" class="btn">
-        Pat.M 29 Jahre alt.<br>Patient wirkt blass, am linken Unterarm ist eine starke Blutung zu sehen.
-        <span>⬇ Weitere Informationen</span>
+        Pat.M 29 Jahre alt.<br>Patient wirkt blass, am linken Unterarm ist eine starke Blutung zu sehen.<br>Pat.AB-Stabil C-Instabil
+        <span>Weiter durch klicken</span>
     </button>
     <button id="btn2" class="btn hidden">
         Der Pat. hat mehrere kleine Hämatome an den Armen.<br>Er ist nicht eingeklemmt und frei zugänglich.
-        <span>⬇ Weitere Informationen</span>
+        <span>Weiter durch klicken</span>
     </button>
     <button id="btnCountdown1" class="btn hidden">
         Sofortmaßnahme: Tournequet<br><span id="countdown1" class="countdown"></span>
@@ -141,7 +141,7 @@
     </button>
     <button id="btn3" class="btn hidden">
         Die Blutung konnte mit der Sofortmaßnahme erstversorgt werden.
-        <span>⬇ Weitere Informationen</span>
+        <span>Weiter durch klicken</span>
     </button>
     <button id="btnCustom" class="btn hidden">
         Die Pat. wird bewusstlos<br>Keine Atmung vorhanden<br>Kein zentraler Puls tastbar
