--- a/Patient9.html
+++ b/Patient9.html
@@ -49,7 +49,7 @@
             display: block;
             margin-top: 10px;
             font-size: 0.9em;
-            color: white;
+            color: red;
             font-weight: bold;
         }
 
@@ -123,13 +123,14 @@
 <!-- Buttons -->
 <div class="button-container">
     <button id="btn1" class="btn">
-        Pat. W 18 Jahre alt.<br>Die Pat. wirkt sehr vmitgenommen aufgeregt<br>Sie konnte den PKW bereits selber verlassen.<br>Die Pat. sitz am Boden und hat starke Schmerzen im Fußbereich.
-        <span>⬇ Weitere Informationen</span>
+        Pat. W 18 Jahre alt.<br>Die Pat. wirkt sehr mitgenommen und aufgeregt<br>Sie konnte den PKW bereits selber verlassen.
+        <br>Die Pat. sitz am Boden und hat starke Schmerzen im Fußbereich.<br>Die Pat. ist ABC-Stabil
+        <span>Weiter durch klicken</span>
     </button>
     <button id="btn2" class="btn hidden">
         Die Pat. gibt weitere Schmerzen im Thoraxbereich an.<br>Ausgelöst durch den Gurt im PKW.<br>Sonst ist die Pat. ABC-stabil.<br>
         Der Fuß weist eine sichtbare geschlossene Fehlstellung in Höhe des Sprunggelenkes vor.
-        <span>⬇ Weitere Informationen</span>
+        <span>Weiter durch klicken</span>
     </button>
     <button id="btnCountdown1" class="btn hidden">
         Sofortmaßnahme:<br>Anlage Schienungsmaterial und reponieren<br><span id="countdown1" class="countdown"></span>
@@ -139,7 +140,7 @@
     </button>
     <button id="btn3" class="btn hidden">
         Die Pat. gibt weiter Schmerzen an.<br>Die Pat. ist weiter ABC-Stabil
-        <span>⬇ Weitere Informationen</span>
+        <span>Weiter durch klicken</span>
     </button>
     <button id="btn4" class="btn hidden">
         Sichtungskategorie wählen<br>und zum nächsten Patienten!
