--- a/Patient10.html
+++ b/Patient10.html
@@ -49,7 +49,7 @@
             display: block;
             margin-top: 10px;
             font-size: 0.9em;
-            color: white;
+            color: red;
             font-weight: bold;
         }
 
@@ -127,12 +127,12 @@
         <br>Er ist ABC-Stabil<br>Weißt aber ein ausgeprägtes Brillenhämatom vor<br>
         Mehrere Hämatome an der Stirn und am Kiefer sind sichtbar<br>
 
-        <span>⬇ Weitere Informationen</span>
+        <span>Weiter durch klicken</span>
     </button>
     <button id="btn2" class="btn hidden">
         Der Pat. klagt auch über starken Schwindel und Unwohlsein <br>
         Der Pat. ist nicht eingeklemmt und frei zugänglich.
-        <span>⬇ Weitere Informationen</span>
+        <span>Weiter durch klicken</span>
     </button>
     <button id="btnCountdown1" class="btn hidden">
         Sofortmaßnahme:<br>Patient soll den PKW selber verlassen<br>
@@ -147,11 +147,11 @@
     </button>
     <button id="btn3" class="btn hidden">
        Der Pat<br>Die Pat. wird AB Kritisch
-        <span>⬇ Weitere Informationen</span>
+        <span>Weiter durch klicken</span>
     </button>
     <button id="btnCustom" class="btn hidden">
        Die Pat. ist weiter ABC-Stabil<br>
-       <span>⬇ Weitere Informationen</span>
+       <span>Weiter durch klicken</span>
     </button>
     <button id="btn4" class="btn hidden">
         Sichtungskategorie wählen<br>und zum nächsten Patienten!
