--- a/Patient11.html
+++ b/Patient11.html
@@ -49,7 +49,7 @@
             display: block;
             margin-top: 10px;
             font-size: 0.9em;
-            color: white;
+            color: red;
             font-weight: bold;
         }
 
@@ -124,11 +124,11 @@
 <div class="button-container">
     <button id="btn1" class="btn">
         Pat. M 45 Jahre alt.<br>Der Pat. war nicht direkt beteiligt.<br>Er war mit seinem PKW zu erst am Unfallort .<br>
-        <span>⬇ Weitere Informationen</span>
+        <span>Weiter durch klicken</span>
     </button>
     <button id="btn2" class="btn hidden">
         Der Pat.wirkt sehr mitgenommen<br>Er wollte einem Bewusstlosen helfen<br>Aber er war sich sehr unsicher.<br>Der Pat. ist ABC-Stabil und kniet neben einem Bewusstlosen.
-        <span>⬇ Weitere Informationen</span>
+        <span>Weiter durch klicken</span>
     </button>
     <button id="btnCountdown1" class="btn hidden">
         Sofortmaßnahme:<br>Betreuung bis weitere Kräfte vor Ort sind<span id="countdown1" class="countdown"></span>
@@ -139,7 +139,7 @@
     </button>
     <button id="btn3" class="btn hidden">
         Der Zustand der Pat. ist unverändert.<br>
-        <span>⬇ Weitere Informationen</span>
+        <span>Weiter durch klicken</span>
     </button>
     <button id="btn4" class="btn hidden">
         Sichtungskategorie wählen<br>und zum nächsten Patienten!
