--- a/Patient12.html
+++ b/Patient12.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="de">
 <head>
@@ -50,7 +49,7 @@
             display: block;
             margin-top: 10px;
             font-size: 0.9em;
-            color: white;
+            color: red;
             font-weight: bold;
         }
 
@@ -75,7 +74,7 @@
             font-size: 1.2em;
             cursor: pointer;
             text-align: center;
-            z-index: 2000;
+            z-index: 2000; /* Sicherstellen, dass der Button immer sichtbar bleibt */
         }
 
         #einsatzabbruchButton:hover {
@@ -124,32 +123,23 @@
 <!-- Buttons -->
 <div class="button-container">
     <button id="btn1" class="btn">
-        Pat. M 54 Jahre alt.<br>Der Pat. liegt auf dem Rücken neben dem Fahrzeug.<br>
-        Der Pat. reagiert nicht auf Ansprache nicht auf Schmerzreiz.<br>
-    
-        <span>⬇ Weitere Informationen</span>
+        Pat. M 45 Jahre alt.<br>Der Pat. war nicht direkt beteiligt.<br>Er war mit seinem PKW zu erst am Unfallort .<br>
+        <span>Weiter durch klicken</span>
     </button>
     <button id="btn2" class="btn hidden">
-        Keine Atmung vorhanden<br>Der Puls ist zentral und peripher nicht tastbar.<br>
-        Der Pat. war Insasse des Fahrzeuges.<br>Er ist wohl noch aus dem PKW geklettert<br>
-        starke Prellmarken am ganzen Oberkörper sichtbar.
-        <span>⬇ Weitere Informationen</span>
+        Der Pat.wirkt sehr mitgenommen<br>Er wollte einem Bewusstlosen helfen<br>Aber er war sich sehr unsicher.<br>Der Pat. ist ABC-Stabil und kniet neben einem Bewusstlosen.
+        <span>Weiter durch klicken</span>
     </button>
     <button id="btnCountdown1" class="btn hidden">
-        Sofortmaßnahme:<br>stabile Seitenlage<span id="countdown1" class="countdown"></span>
+        Sofortmaßnahme:<br>Betreuung bis weitere Kräfte vor Ort sind<span id="countdown1" class="countdown"></span>
     </button>
     <button id="btnCountdown2" class="btn hidden">
-        Sofortmaßnahme:<br>Beginn der Reanimation<span id="countdown2" class="countdown"></span>
-    </button>
-    <button id="btnCountdown3" class="btn hidden">
-       Keine Sofortmaßnahme nötig <br><span id="countdown3" class="countdown"></span>
+        Sofortmaßnahme:<br>Pat. in seinen PKW schicken
+    <span id="countdown2" class="countdown"></span>
     </button>
     <button id="btn3" class="btn hidden">
-        Keine Veränderung der Parameter
-        <span>⬇ Weitere Informationen</span>
-    </button>
-    <button id="btnCustom" class="btn hidden">
-      Keine Veränderung der Parameter
+        Der Zustand der Pat. ist unverändert.<br>
+        <span>Weiter durch klicken</span>
     </button>
     <button id="btn4" class="btn hidden">
         Sichtungskategorie wählen<br>und zum nächsten Patienten!
@@ -159,7 +149,7 @@
 <!-- Modal für Bildanzeige -->
 <div id="modal">
     <div id="modalContent">
-        <img src="VU TOD2Thorax.jpg" alt="VU TOD2">
+        <img src="Mensch.jpg" alt="VU Mensch">
         <span id="closeModal">Schließen</span>
     </div>
 </div>
@@ -171,26 +161,26 @@
     let countdownIntervals = {};
 
     function toggleButtons(currentButtonId, nextButtonId) {
-        // Alle Buttons ausblenden
-        document.querySelectorAll(".btn").forEach(btn => btn.classList.add("hidden"));
-        // Nur den nächsten Button anzeigen
+        document.getElementById(currentButtonId).classList.add("hidden");
         document.getElementById(nextButtonId).classList.remove("hidden");
     }
 
-    function startCountdown(buttonId, countdownId, nextButtonId, seconds) {
+    function startCountdown(buttonId, countdownId, nextButtonId, otherButtonId, seconds) {
         let countdownElement = document.getElementById(countdownId);
         let timeLeft = seconds;
         countdownElement.style.visibility = "visible";
         countdownElement.innerText = timeLeft;
         document.getElementById(buttonId).disabled = true;
+        document.getElementById(otherButtonId).disabled = true;
 
         countdownIntervals[buttonId] = setInterval(() => {
             timeLeft--;
             countdownElement.innerText = timeLeft;
             if (timeLeft <= 0) {
                 clearInterval(countdownIntervals[buttonId]);
-                // Nur den nächsten Button anzeigen
-                toggleButtons(buttonId, nextButtonId);
+                document.getElementById(buttonId).classList.add("hidden");
+                document.getElementById(otherButtonId).classList.add("hidden");
+                document.getElementById(nextButtonId).classList.remove("hidden");
             }
         }, 1000);
     }
@@ -206,35 +196,26 @@
     document.getElementById("btn2").addEventListener("click", function () {
         toggleButtons("btn2", "btnCountdown1");
         document.getElementById("btnCountdown2").classList.remove("hidden");
-        document.getElementById("btnCountdown3").classList.remove("hidden");
         document.getElementById("modal").style.display = "flex"; // Bild wird angezeigt
     });
 
     document.getElementById("btnCountdown1").addEventListener("click", function () {
-        startCountdown("btnCountdown1", "countdown1", "btn3", 30);
+        startCountdown("btnCountdown1", "countdown1", "btn3", "btnCountdown2", 90);
     });
 
     document.getElementById("btnCountdown2").addEventListener("click", function () {
-        startCountdown("btnCountdown2", "countdown2", "btn3", 45);
-    });
-
-    document.getElementById("btnCountdown3").addEventListener("click", function () {
-        startCountdown("btnCountdown3", "countdown3", "btnCustom", 01);
+        startCountdown("btnCountdown2", "countdown2", "btn3", "btnCountdown1", 1);
     });
 
     document.getElementById("btn3").addEventListener("click", function () {
         toggleButtons("btn3", "btn4");
     });
 
-    document.getElementById("btnCustom").addEventListener("click", function () {
-        toggleButtons("btnCustom", "btn4");
-    });
-
     document.getElementById("btn4").addEventListener("click", function () {
         redirectToIndex();
     });
 
-    // Schließen des Bildes durch Klick auf den Schließen-Button
+    // Schließen des Bildes durch Klick auf das Bild
     document.getElementById("closeModal").addEventListener("click", function () {
         document.getElementById("modal").style.display = "none";
     });
