--- a/patient13.html
+++ b/patient13.html
@@ -49,7 +49,7 @@
             display: block;
             margin-top: 10px;
             font-size: 0.9em;
-            color: white;
+            color: red;
             font-weight: bold;
         }
 
@@ -124,11 +124,12 @@
 <div class="button-container">
     <button id="btn1" class="btn">
         Pat.M 24 Jahre alt.<br>Patient wirkt blass, an beiden Unterschenkeln sind starke Blutungen zu sehen.
-        <span>⬇ Weitere Informationen</span>
+        <span>Weiter durch klicken</span>
     </button>
     <button id="btn2" class="btn hidden">
-        Der Pat. hat mehrere  Hämatome sichtbar.<br>Er ist unterhalb der Knie eingeklemmt.<br>Die Blutungen sind nicht zu erreichen.
-        <span>⬇ Weitere Informationen</span>
+        <br>Er ist unterhalb der Knie eingeklemmt.<br>Die Blutungen sind nicht zu erreichen.
+        <br>Der Pat. ist AB-stabil und C-Instabil
+        <span>Weiter durch klicken</span>
     </button>
     <button id="btnCountdown1" class="btn hidden">
         Sofortmaßnahme: Tournequet<br><span id="countdown1" class="countdown"></span>
@@ -141,7 +142,7 @@
     </button>
     <button id="btn3" class="btn hidden">
         Die Blutung konnte mit der Sofortmaßnahme erstversorgt werden.
-        <span>⬇ Weitere Informationen</span>
+        <span>Weiter durch klicken</span>
     </button>
     <button id="btnCustom" class="btn hidden">
         Der Pat. wird bewusstlos<br>Keine Atmung vorhanden<br>Kein zentraler Puls tastbar
