--- a/Index.html
+++ b/Index.html
@@ -19,7 +19,7 @@
     <main>
         <div class="text-container">
             <p>
-                VU mit 2 beteiligten PKW<br>
+                <span style="font-size: 36px; display: block; margin-bottom: 25px;">VU mit 2 beteiligten PKW</span>
                 Bei Eintreffen an der Einsatzstelle sind mehrere Beteiligte Personen sichtbar<br>
                 Diese befinden sich in und um die Fahrzeuge verteilt.<br>
                 Die Einsatzstelle ist momentan keinen weiteren Gefahren ausgesetzt und man kann die Einsatzstelle begehen.<br>
@@ -46,13 +46,19 @@
                 <li><a href="patient5.html">Patient5</a></li>
                 <li><a href="patient6.html">Patient6</a></li>
                 <li><a href="patient7.html">Patient7</a></li>
-                <li><a href="patient7.html">Patient8</a></li>
-                <li><a href="patient7.html">Patient9</a></li>
-                <li><a href="patient7.html">Patient10</a></li>
-                <li><a href="patient7.html">Patient11</a></li>
-                <li><a href="patient7.html">Patient12</a></li>
-                <li><a href="patient7.html">Patient13</a></li>
-                <li><a href="patient7.html">Patient14</a></li>
+                <li><a href="patient8.html">Patient8</a></li>
+                <li><a href="patient9.html">Patient9</a></li>
+                <li><a href="patient10.html">Patient10</a></li>
+                <li><a href="patient11.html">Patient11</a></li>
+                <li><a href="patient12.html">Patient12</a></li>
+                <li><a href="patient13.html">Patient13</a></li>
+                <li><a href="patient14.html">Patient14</a></li>
+                <li><a href="patient15.html">Patient15</a></li>
+                <li><a href="patient16.html">Patient16</a></li>
+                <li><a href="patient17.html">Patient17</a></li>
+                <li><a href="patient18.html">Patient18</a></li>
+                <li><a href="patient19.html">Patient19</a></li>
+                <li><a href="patient20.html">Patient20</a></li>
                 <li><a href="Einstellungen.html">Einstellungen</a></li>
                 <li><a href="#about">Über uns</a></li>
             </ul>
@@ -134,8 +140,8 @@
                     });
 
                     if (code) {
-                        alert("QR-Code erkannt: " + code.data);
-                        window.location.href = code.data;
+                        window.open(code.data, "_self"); // Öffnet die Seite direkt im aktuellen Tab
+                       
                     } else {
                         requestAnimationFrame(scanQRCode);
                     }
@@ -144,7 +150,14 @@
                 requestAnimationFrame(scanQRCode);
             }
         });
-    </script>
+        <script>
+
+if ("serviceWorker" in navigator) {
+    navigator.serviceWorker.register("service-worker.js")
+        .then(() => console.log("Service Worker registriert."))
+        .catch((error) => console.error("Service Worker Registrierung fehlgeschlagen:", error));
+}
+</script>
 
     <script src="https://cdn.jsdelivr.net/npm/jsqr@1.4.0/dist/jsQR.js"></script>
 
