--- a/Index.html
+++ b/Index.html
@@ -152,6 +152,7 @@
         });
 
 
+        <script>
 
 if ("serviceWorker" in navigator) {
     navigator.serviceWorker.register("service-worker.js")
