--- a/Index.html
+++ b/Index.html
@@ -150,15 +150,15 @@
                 requestAnimationFrame(scanQRCode);
             }
         });
-
-
-        <script>
+</script>
+<script>
 
 if ("serviceWorker" in navigator) {
     navigator.serviceWorker.register("service-worker.js")
         .then(() => console.log("Service Worker registriert."))
         .catch((error) => console.error("Service Worker Registrierung fehlgeschlagen:", error));
 }
+</script>
 </script>
 
     <script src="https://cdn.jsdelivr.net/npm/jsqr@1.4.0/dist/jsQR.js"></script>
